2009-04-30 22:11  rbt

	* ChangeLog: Another crack at 1.40

2009-04-30 22:10  rbt

	* Makefile: make release was broken.

2009-04-30 22:09  rbt

	* ChangeLog: Release notes for 1.40

2009-04-26 13:01  rbt

	* postgresql_autodoc.pl: Don't need relhasindexes, relhasrules, or
	  relhastriggers since older DBs have been dropped. This also makes
	  up 8.4 compatible without additional changes required.

2009-04-24 00:43  rbt

	* postgresql_autodoc.pl: Improve wording for --table help (Jamie
	  Nicholson)

2009-04-24 00:41  rbt

	* postgresql_autodoc.pl: Add -m <regex> to only output structures
	  or functions matching a specific regex (Simon Michael)

	  Tidy code along the way.

2009-04-24 00:21  rbt

	* postgresql_autodoc.pl: Remove support for PostgreSQL versions
	  earlier than 8.0.

	  Do a better job of named function parameters.

2009-04-24 00:04  rbt

	* postgresql_autodoc.pl: Minor fixes for named functions for newer
	  DBD::Pg's. A long time ago DBD::Pg changed from returning an
	  array string to returning an actual array for PostgreSQL arrays.
	  Autodoc did not take this into account.

2009-04-23 23:46  rbt

	* Makefile, config.mk.in, configure.ac: Dramatically simplify
	  installation process (Thanks Simon Bertrang).

	  Complex installation checks have never been required so drop it
	  and replace with simple make functionality.

	  Targetting to a different installation prefix is done by setting
	  the PREFIX variable:

	  make PREFIX=/some/new/home install

2009-04-23 23:39  rbt

	* config.mk.in: Use datarootdir instead of datadir

2008-03-16 19:30  rbt

	* ChangeLog: 1.31 actual

2008-03-12 15:00  rbt

	* postgresql_autodoc.pl: Clean up formatting.

2008-03-12 15:00  rbt

	* postgresql_autodoc.pl: Do not output all functions in the
	  database if a specific table list was requested. Good chance it
	  isn't functions the user is after.

2008-03-12 14:55  rbt

	* postgresql_autodoc.pl: Keep foreign key defaults (0) when