@@ -1,3 +1,11 @@
+2009-04-30 22:14  rbt
+
+	* ChangeLog, Makefile: Really fix the release process.
+
+2009-04-30 22:13  rbt
+
+	* postgresql_autodoc.pl: Tag for 1.40
+
 2009-04-30 22:11  rbt
 
 	* ChangeLog: Another crack at 1.40
